# textureDeform

./: CMakeLists.txt  MayaBuildConf.cmake  MentalRayBuildConf.cmake  README.md
deformers/: CMakeLists.txt  td_basic_deformers.cpp  td_basic_deformers.mi
kernel/: CMakeLists.txt  kernel.cpp  kernel.mi  miaux.c  miaux.cpp  miaux.h
textures/: CMakeLists.txt  basic_textures.cpp  basic_textures.mi
